# evidence-resume-system

./: .gitignore  DISCLAIMER.md  LICENSE-CODE  README.md  pyproject.toml
docs/: privacy-scanner.md  schema-guide.md  usage.md
examples/demo-claim-bundle/: README.md  claim-bundle.json  expected-report.md
schemas/: claim-bundle.schema.json  claim.schema.json  decision.schema.json  evidence.schema.json  render-config.schema.json
src/evidence_resume_system/: __init__.py  claim_graph.py  cli.py  load.py  privacy_scan.py  render_markdown.py  schema_validation.py
tests/: test_claim_graph.py  test_cli.py  test_privacy_scan.py  test_render_markdown.py  test_schema_validation.py
tests/fixtures/: invalid_missing_evidence.json  valid_bundle.json
